[gd_scene load_steps=7 format=4 uid="uid://cq1o5hcqif62l"]

[ext_resource type="Script" uid="uid://df6ssy33b1ris" path="res://Scripts/sub_game.gd" id="1_v5fik"]
[ext_resource type="Texture2D" uid="uid://dhjdwg5shcwt0" path="res://Gfx/TileCave.png" id="2_ewyn5"]
[ext_resource type="PackedScene" uid="uid://plijsrh17yxp" path="res://Scenes/item_balloon.tscn" id="3_ewyn5"]
[ext_resource type="Script" uid="uid://c8hnjq2wfk3np" path="res://Scripts/Components/TileMapLayerLimits.gd" id="3_v5fik"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q8ab6"]
texture = ExtResource("2_ewyn5")
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10, -10, 10, -10, 10, 10, -10, 10)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_m176q"]
tile_size = Vector2i(20, 20)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_q8ab6")

[node name="SubGame" type="SubViewportContainer"]
script = ExtResource("1_v5fik")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(640, 350)
render_target_update_mode = 4

[node name="TileMapGroup" type="Node2D" parent="SubViewport"]

[node name="CaveWalls" type="TileMapLayer" parent="SubViewport/TileMapGroup"]
position = Vector2(0, -5)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAAABEAAAAAAAAAAAABABEAAAAAAAAAAAACABEAAAAAAAAAAAADABEAAAAAAAAAAAAEABEAAAAAAAAAAAAFABEAAAAAAAAAAAAGABEAAAAAAAAAAAAHABEAAAAAAAAAAAAIABEAAAAAAAAAAAAJABEAAAAAAAAAAAAKABEAAAAAAAAAAAALABEAAAAAAAAAAAAMABEAAAAAAAAAAAANABEAAAAAAAAAAAAOABEAAAAAAAAAAAAPABEAAAAAAAAAAAAQABEAAAAAAAAAAAARABEAAAAAAAAAAAASABEAAAAAAAAAAAATABEAAAAAAAAAAAAUABEAAAAAAAAAAAAVABEAAAAAAAAAAAAWABEAAAAAAAAAAAAXABEAAAAAAAAAAAAYABEAAAAAAAAAAAAZABEAAAAAAAAAAAAaABEAAAAAAAAAAAAbABEAAAAAAAAAAAAcABEAAAAAAAAAAAAdABEAAAAAAAAAAAAeABEAAAAAAAAAAAAeAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAcAP//AAAAAAAAAAAbAP//AAAAAAAAAAAaAP//AAAAAAAAAAAZAP//AAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_m176q")
script = ExtResource("3_v5fik")
metadata/_custom_type_script = "uid://c8hnjq2wfk3np"

[node name="ItemBalloon" parent="SubViewport" instance=ExtResource("3_ewyn5")]
position = Vector2(128, 128)

[node name="TimerGenerateTerrain" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="TimerGenerateTerrain" to="." method="_on_timer_timeout"]
